<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_auth"
        android:icon="@android:drawable/ic_partial_secure"
        android:orderInCategory="1"
        android:title="@string/action_auth"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:orderInCategory="2"
        android:title="@string/action_settings"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_close"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:orderInCategory="3"
        android:title="@string/action_close"
        app:showAsAction="always" />
</menu>