<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:accessibilityLiveRegion="polite"
            android:calendarViewShown="false" />

        <CheckBox
            android:id="@+id/cbDeleteFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chbDeleteFriends"
            android:layout_gravity="center"
            android:layout_marginLeft="-21dp"
            android:layout_marginTop="20dp" />

        <CheckBox
            android:id="@+id/cbUnsubscribeTweets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chbUnsubcribeTweets"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/bRunDelete"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/btnRunDelete"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp" />

    </LinearLayout>
</ScrollView>